# jungledevs-challenge

./: .env  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  app.py  db.sqlite3  docker-compose.yml  local.env  pyproject.toml  tests.py
.circleci/: config.yml
.github/workflows/: cicd.yml  django.yml  python-app.yml
app/: settings.py  urls.py  webscrapping.py
app/core/: settings.py
app/fixtures/: usuario_lindo.json
app/impostor/: apps.py
app/scripts/: carga.sh
app/templates/: index.html
app/tributos/: imposto_de_renda.py
app/user/: admin.py  api.py  mensagens.py  models.py  serializer.py  urls.py
app/user/migrations/: 0001_initial.py  0002_alter_usermodel_imported_t.py  0002_alter_usermodel_phone.py  0002_alter_usermodel_postcode.py  0002_auto_20211003_1549.py  0003_alter_usermodel_offset.py  0003_auto_20211003_2134.py  0003_auto_20211024_2019.py  0004_alter_usermodel_imported_t.py  0004_alter_usermodel_seed.py  0004_auto_20211024_2026.py  0005_alter_usermodel_points.py  0006_alter_usermodel_points.py  0007_auto_20211024_2033.py  0008_auto_20220619_1304.py
app/user/tests/: test_api.py  test_general.py  test_user.py
fixtures/: user.json  usuario_lindo.json
scripts/: carga.sh
