[tool.poetry]
name = "p"
version = "0.1.0"
description = ""
authors = ["Fedorov <atiliogoulart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.15.0"
telebot = "^0.0.4"
Flask = "^2.1.3"
celery = "^5.2.7"
redis = "^4.3.4"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
